--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <section id="main_content" class="inner">
         <h1>
 <a name="testing-ddp-results-viewer" class="anchor" href="#testing-ddp-results-viewer"><span class="octicon octicon-link"></span></a>Testing DDP Results Viewer</h1>
-<script src="https://embed.github.com/view/3d/ameyakarve/ddpResults/master/solidOfRevolution/90degreeelbows/inputs/1142040.stl"></script>
+<script src="https://embed.github.com/view/3d/ameyakarve/ddpResults/master/solidOfRevolution/90degreeelbows/inputs/1142040.stl?width=500&height=300"></script>
 
-<script src="https://embed.github.com/view/3d/ameyakarve/ddpResults/master/solidOfRevolution/90degreeelbows/outputs/1142040.stl"></script>
+<script src="https://embed.github.com/view/3d/ameyakarve/ddpResults/master/solidOfRevolution/90degreeelbows/outputs/1142040.stl?width=500&height=300"></script>
 
 
 
